--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.INTERNET" />
- <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
     <application
         android:name="com.example.testaudioandroid.MyApplication"
         android:allowBackup="true"
@@ -28,6 +29,10 @@
         <activity
             android:name="com.example.testaudioandroid.RoomActivity"
             android:label="@string/title_activity_room" >
+        </activity>
+        <activity
+            android:name="com.example.testaudioandroid.Config"
+            android:label="@string/title_activity_config" >
         </activity>
     </application>
 
